--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+<head>
+  <meta name="google-site-verification" content="LSqh14upyqz85c6feaBsodqeiFLGSPHtANJ9lDReIiI" />
+</head>
 <!-- Page Header -->
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
