--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-
+   <meta name="google-site-verification" content="LSqh14upyqz85c6feaBsodqeiFLGSPHtANJ9lDReIiI" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
