--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <head>
   <meta name="google-site-verification" content="LSqh14upyqz85c6feaBsodqeiFLGSPHtANJ9lDReIiI" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7979636232743027"
+     crossorigin="anonymous"></script>
 </head>
 <!-- Page Header -->
 {% if page.background %}
