--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7979636232743027"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script> </head>
      
    <meta name="google-site-verification" content="LSqh14upyqz85c6feaBsodqeiFLGSPHtANJ9lDReIiI" />
   <meta charset="utf-8">
